Add find by ids method